Fix stying issues on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 a {
   color: #F42C22;
   box-shadow: none;
@@ -26,6 +31,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .github-link {
